// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Playlist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-ybovyg overlay"
    >
      <div
        class="content svelte-ybovyg"
      >
        <span
          class="artwork svelte-ybovyg"
        >
          <span
            class="svelte-1ovzze"
          />
           
        </span>
         
        <p
          class="controls svelte-ybovyg"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-ybovyg"
      >
        <h3
          class="svelte-ybovyg"
        >
          My favourites
        </h3>
         
        <h4
          class="svelte-1ovzze"
          slot="details"
        >
          3 tracks
        </h4>
      </header>
    </span>
  </div>
</section>
`;

exports[`Storyshots Components/Playlist Single Track 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
     
    <span
      class="svelte-ybovyg overlay"
    >
      <div
        class="content svelte-ybovyg"
      >
        <span
          class="artwork svelte-ybovyg"
        >
          <span
            class="svelte-1ovzze"
          />
           
        </span>
         
        <p
          class="controls svelte-ybovyg"
        >
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="play"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              play_arrow
            </i>
             
             
             
          </button>
           
          <button
            class="primary iconOnly large svelte-1lod44n"
            data-testid="enqueue"
          >
            <i
              class="material-icons svelte-1lod44n"
            >
              playlist_add
            </i>
             
             
             
          </button>
        </p>
      </div>
       
      <header
        class="svelte-ybovyg"
      >
        <h3
          class="svelte-ybovyg"
        >
          My favourites
        </h3>
         
        <h4
          class="svelte-1ovzze"
          slot="details"
        >
          1 track
        </h4>
      </header>
    </span>
  </div>
</section>
`;
